# checkpoint

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  register-protocol.sh  vite.config.ts
.github/workflows/: build.yml
docs/: index.html  script.js  style.css
docs/documentation/: index.html  script.js  style.css
public/: auth-callback.html  client_secret.json.example
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  game.rs  lib.rs  main.rs  oauth_server.rs  process.rs  snapshot.rs
src/components/: AddGameModal.tsx  CloudBackupInfo.tsx  CloudBackupListModal.tsx  ConfirmModal.tsx  Dashboard.tsx  EditGameModal.tsx  GameCard.tsx  GameDetail.tsx  LoadingOverlay.tsx  Notifications.tsx  Profile.tsx  ProfileCard.tsx  Settings.tsx  Toast.tsx
src/components/ui/: Button.tsx  Input.tsx  Select.tsx  index.ts
src/i18n/: en.json  es.json  pt.json
src/lib/: api.ts  googleDrive.ts  i18n.tsx  profileContext.tsx  toastContext.tsx  types.ts
