[package]
name = "checkpoint"
version = "0.1.0"
edition = "2021"
authors = ["checkpoint"]

[lib]
name = "checkpoint_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "checkpoint"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
walkdir = "2.4"
base64 = "0.21"
sysinfo = "0.30"
dirs = "5.0"
zip = "0.6"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
warp = "0.3"
once_cell = "1"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
